# dotfiles

./: .gitignore  .gitmodules  gammyconf  rc.lua  theme.lua
ags/: .editorconfig  .eslintignore  .eslintrc.yaml  .gitignore  ;  ags.d.ts  ags.ts  config.js  jsconfig.json  main.ts  options.ts  package-lock.json  package.json  style.css  tsconfig.json  user.js  user.ts
alacritty/: alacritty.toml  alacritty.yml
awesome/: .gitignore  TODO  TODO.md  config-bak.lua  config-diff.lua  rc-other.lua  rc.lua
bind/: bindtotags.lua  clientbuttons.lua  clientkeys.lua  globalbuttons.lua  globalkeys.lua
deco/: statusbar.lua  taglist.lua  tasklist.lua  titlebar.lua  wallpaper.lua
eww/: TODO.md  eww.scss  eww.yuck  test.txt  user.scss
eww/scripts/get_icon/: Cargo.toml
eww/scripts/get_icon/src/: args.rs  main.rs  resolver.rs
eww/scripts/get_icon/src/resolver/: default.rs  desktop.rs  exception.rs  fallback.rs  linicon.rs  resolver.rs
flameshot/: flameshot.ini
fontconfig/: fonts.conf
gammastep/: config.ini
home-manager/: flake.nix  home.nix
htop/: htoprc
hypr/: \  animations.conf  decorations.conf  hyprland.conf  hyprlandd.conf  hyprload.toml  input.conf  install-plugins.sh  update.sh
main/: autostart.lua  error-handling.lua  layouts.lua  menu.lua  rules.lua  signals.lua  tags.lua  user-vars.lua
neofetch/: config.conf
nvim/: .editorconfig  .luacheckrc  .stylua.toml  TODO.md  clean.sh  init.lua  lazy-lock.json  lazy.txt  packer-uninstall.sh
picom/: oldconf  picom.conf
redshift/: redshift.conf
rofi/: config.rasi  grid.rasi  list.rasi  netheme.rasi  (+1 more)
(+606 files in other folders)
