[package]
name = "get_icon"
version = "0.1.0"
edition = "2021"
description = "Tool to look up icons for applications"

[dependencies]
linicon = "2.3"
clap = { version = "4.3", features = ["derive"] }
clap_complete = "4.3.2"
freedesktop_entry_parser = "1.3"
shellexpand = "3.1.0"
walkdir = "2.3.3"
freedesktop-desktop-entry = "0.5.0"
